work-calendar-k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: work-calendar

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: work-calendar-ingress
  namespace: work-calendar
spec:
  tls:
    - hosts:
        - work-calendar.maartendev.me
      secretName: letsencrypt-prod
  rules:
    - host: work-calendar.maartendev.me
      http:
        paths:
          - backend:
              serviceName: work-calendar-svc
              servicePort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: work-calendar-svc
  namespace: work-calendar
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  selector:
    app: work-calendar-app
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-calendar-app-deployment
  namespace: work-calendar
  labels:
    app: work-calendar-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: work-calendar-app
      tier: web
  template:
    metadata:
      labels:
        app: work-calendar-app
        tier: web
    spec:
      containers:
        - name: work-calendar-app
          image: $DOCKER_IMAGE_URL:$GIT_COMMIT_SHORT
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets
              mountPath: /app/secrets
              readOnly: true
            - name: tokens
              mountPath: /app/token.json
              readOnly: true
          
      volumes:
        - name: secrets
          secret:
            secretName: work-calendar-appsettings
        - name: tokens
          secret:
            secretName: work-calendar-tokens
